--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="jquery-throttle-debounce.js"></script>
     <script>window.lo = _.noConflict();</script>
+	 <script type="text/javascript">
+		 function delayed(func, timeout)
+		 {
+		   return lo.compose(lo.partialRight(setTimeout, timeout), func.bind.bind(func, func));
+		 }
+	 </script>
 
   </head>
   <body>
@@ -108,6 +114,7 @@
 
     <div id="content">
       <h2>Mousemove Events:</h2><div id="allEvents"></div>
+		<h2>Delayed Mousemove Events: delayed(fn, 200);</h2><div id="delayedEvents"></div>
       <h2>Debounce Inmediate: _.debounce(fn, 200, true);</h2><div id="debounce_true"></div>
       <h2>Debounce Inmediate: $.debounce(200, true, fn);</h2> <div id="debouncejtrue"></div>
       <h2>Debounce: _.debounce(fn, 200);</h2> <div id="debounce_false"></div>
@@ -116,7 +123,7 @@
       <h2>Throttle with trailing: $.throttle(200, false, fn);</h2> <div id="throttlejfalse"></div>
       <h2>Throttle: $.throttle(200, true, fn);</h2> <div id="throttlejtrue"></div>
     </div>
-    <a href="https://github.com/dcorb/debounce-throttle">
+    <a href="https://github.com/semmel/debounce-throttle">
       <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub">
     </a>
   </body>
