--- a/index.html
+++ b/index.html
@@ -92,10 +92,51 @@
     <script type="text/javascript" src="jquery-throttle-debounce.js"></script>
     <script>window.lo = _.noConflict();</script>
 	 <script type="text/javascript">
-		 function delayed(func, timeout)
-		 {
-		   return lo.compose(lo.partialRight(setTimeout, timeout), func.bind.bind(func, func));
-		 }
+		function delayed(func, timeout)
+		{
+		  	return lo.compose(lo.partialRight(setTimeout, timeout), func.bind.bind(func, func));
+		}
+
+
+		function sequenced(method, pauseMSecs)
+		{
+			var previous = 0;
+			var timeout = 0;
+			var invocations = [];
+			var lastResult;
+
+			function callNext()
+			{
+				var invocation = invocations.shift();
+
+				lastResult = method.apply(invocation.context, invocation.parameters);
+
+				if (invocations.length > 0)
+				{
+					timeout = setTimeout(callNext, pauseMSecs);
+				}
+				else
+				{
+					timeout = 0;
+				}
+
+				previous = (new Date()).getTime();
+			}
+
+			return function()
+			{
+				invocations.push({context: this, parameters: arguments});
+
+				if (timeout == 0)
+				{
+					var remaining = pauseMSecs - ((new Date()).getTime() - previous);
+
+					timeout = setTimeout(callNext, Math.min(Math.max(0, remaining), pauseMSecs));
+				}
+
+				return lastResult;
+			};
+		}
 	 </script>
 
   </head>
@@ -115,6 +156,7 @@
     <div id="content">
       <h2>Mousemove Events:</h2><div id="allEvents"></div>
 		<h2>Delayed Mousemove Events: delayed(fn, 200);</h2><div id="delayedEvents"></div>
+		<h2>Sequenced Mousemove Events: sequenced(fn, 200);</h2><div id="sequencedEvents"></div>
       <h2>Debounce Inmediate: _.debounce(fn, 200, true);</h2><div id="debounce_true"></div>
       <h2>Debounce Inmediate: $.debounce(200, true, fn);</h2> <div id="debouncejtrue"></div>
       <h2>Debounce: _.debounce(fn, 200);</h2> <div id="debounce_false"></div>
@@ -123,7 +165,7 @@
       <h2>Throttle with trailing: $.throttle(200, false, fn);</h2> <div id="throttlejfalse"></div>
       <h2>Throttle: $.throttle(200, true, fn);</h2> <div id="throttlejtrue"></div>
     </div>
-    <a href="https://github.com/semmel/debounce-throttle">
+    <a href="https://github.com/dcorb/debounce-throttle">
       <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub">
     </a>
   </body>
